# LR-x

./: CMakeLists.txt  LICENSE  LR.cpp  LR.hpp  README.md  io.h  main.cpp  train.txt
